# erasmus-gp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DESIGN_PROPOSAL.md  GEMINI.md  LICENSE  PROGRESS.md  README.md  REFACTORING_SUMMARY.md  append_test.py  debug_json.py  fix_covariance_v2.py  fix_indentation.py  fix_test.py  fix_test_refs.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.json  test_literal.py
.devcontainer/: .code-workspace  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh  pre-push-hooks.sh
.devcontainer/pgadmin/: servers.json
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/instructions/: architect-reviewer.instructions.md  design-detective.instructions.md  dynamic-optimizer.instructions.md  python-pro.instructions.md  static-optimizer.instruction.md  technical-writer.instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: goals.md  implementation.md  overview.md  refactoring_architecture.md  why.md
docs/design/: bootstrap_mutations.md  concepts.md  connection_processes.md  principles.md  remaining_work_packages.md  selection.md
egpcommon/: README.md  pyproject.toml  requirements.txt  setup.py
egpcommon/data/public_keys/: 22c23596-df90-4b87-88a4-9409a0ea764f.pub
egpcommon/docs/: freezable_object.md  object_deduplicator.md  object_dict.md  style.md
egpcommon/docs/reports/: conversions_report.md
egpcommon/egpcommon/: codon_dev_load.py  common.py  common_obj.py  common_obj_abc.py  common_obj_mixin.py  conversions.py  deduplication.py  egp_log.py  egp_logo.py  egp_rnd_gen.py  freezable_object.py  gp_db_config.py  import_def.py  manage_github_data.py  object_deduplicator.py  object_dict.py  object_set.py  parallel_exceptions.py  properties.py  security.py  spinner.py  text_token.py  tuple_set.py  type_string_parser.py  types_def.py  validator.py
egpcommon/tests/: test_common.py  test_conversions.py  test_dict_type_accessor.py  test_egp_log.py  test_import_def.py  test_merge.py  test_object_set.py  test_properties.py  test_text_token.py  test_tuple_set.py  test_types_def.py
egpdb/: README.md  pyproject.toml  setup.py
egpdbmgr/: README.md  pyproject.toml  setup.py
egppkrapi/: pyproject.toml  requirements.txt  setup.py
egppkrapi/egppkrapi/: main.py  models.py
egppy/: README.md  pyproject.toml  requirements.txt  setup.py  test_ec1.py  test_ec2.py
egpseed/: README.md  pyproject.toml  setup.py
egptypeviewer/: Dockerfile  README.md  pyproject.toml  requirements.txt
egptypeviewer/assets/: styles.css
egptypeviewer/egptypeviewer/: __init__.py  app.py  data_loader.py
scripts/: README_reorder_methods.md  profile_analyze.py  reorder_methods.py  visualize_types.py
tests/: __init__.py  test_egpcommon  test_egpdb  test_egpdbmgr  test_egppy  test_egpseed  test_main_blocks.py  test_reorder_methods.py
(+653 files in other folders)
